// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`getOverview golden default options 1`] = `
{
  "context": 
"# Fixture project
Context note for the golden vault."
,
  "overview": [
    {
      "keywords": [
        "welcome",
        "fixture",
        "orientation",
        "newcomers",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "kubernetes",
        "ingress",
        "pod",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "payroll",
        "tax",
        "withholding",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "collimation",
        "steps",
        "reflector",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "beehive",
        "winterization",
        "varroa",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "sourdough",
        "fermentation",
        "hydration",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "marathon",
        "training",
        "lactate",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywords": [
        "parking",
        "bank guarantee",
        "lease agreement",
        "envelope",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "about": "Architecture Decision Records.",
      "keywords": [
        "transactional",
        "outbox",
        "braintree",
        "postgresql",
        "adopt",
        "postgres",
        "accepted",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywords": [
        "present",
        "telescope",
        "within depth",
        "mentions",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywords": [
        "buried",
        "folder",
        "beyond",
        "limit",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "collapsedFolders": 6,
      "contains": [
        "tenant-0",
        "tenant-1",
        "tenant-2",
        "tenant-3",
        "tenant-4",
        "tenant-5",
      ],
      "keywords": [
        "contract",
        "converted",
        "document",
        "occupancy suite",
        "lease term",
        "floor",
        "apply stated",
        "insurance certificate",
        "signature page",
        "appendix",
        "attached",
        "required",
        "landlord tenant",
        "rent",
        "schedule",
      ],
      "notes": 6,
      "path": "imports",
      "tags": [],
    },
    {
      "keywords": [
        "asha",
        "lukas",
        "engineering",
        "boston",
        "staff",
        "engineer",
        "berlin",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;

exports[`getOverview golden depth 3, keywords 8 1`] = `
{
  "context": 
"# Fixture project
Context note for the golden vault."
,
  "overview": [
    {
      "keywords": [
        "welcome",
        "fixture",
        "orientation",
        "newcomers",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "kubernetes",
        "ingress",
        "pod",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "payroll",
        "tax",
        "withholding",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "collimation",
        "steps",
        "reflector",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "beehive",
        "winterization",
        "varroa",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "sourdough",
        "fermentation",
        "hydration",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "marathon",
        "training",
        "lactate",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywords": [
        "parking",
        "bank guarantee",
        "lease agreement",
        "envelope",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "about": "Architecture Decision Records.",
      "keywords": [
        "transactional",
        "outbox",
        "braintree",
        "postgresql",
        "adopt",
        "postgres",
        "accepted",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywords": [
        "present",
        "telescope",
        "within depth",
        "mentions",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywords": [
        "buried",
        "folder",
        "beyond",
        "limit",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "collapsedFolders": 6,
      "contains": [
        "tenant-0",
        "tenant-1",
        "tenant-2",
        "tenant-3",
        "tenant-4",
        "tenant-5",
      ],
      "keywords": [
        "contract",
        "converted",
        "document",
        "occupancy suite",
        "lease term",
        "floor",
        "apply stated",
        "insurance certificate",
      ],
      "notes": 6,
      "path": "imports",
      "tags": [],
    },
    {
      "keywords": [
        "asha",
        "lukas",
        "engineering",
        "boston",
        "staff",
        "engineer",
        "berlin",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;

exports[`getOverview golden collapse disabled 1`] = `
{
  "context": 
"# Fixture project
Context note for the golden vault."
,
  "overview": [
    {
      "keywords": [
        "welcome",
        "fixture",
        "orientation",
        "newcomers",
        "vault",
      ],
      "notes": 1,
      "path": "/",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "kubernetes",
        "ingress",
        "pod",
        "autoscaling",
        "policies",
        "routing",
      ],
      "notes": 1,
      "path": "areas/alpha",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "payroll",
        "tax",
        "withholding",
        "tables",
        "hourly",
        "contractors",
      ],
      "notes": 1,
      "path": "areas/beta",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "collimation",
        "steps",
        "reflector",
        "optics",
        "telescope",
      ],
      "notes": 1,
      "path": "areas/delta",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "beehive",
        "winterization",
        "varroa",
        "mite",
        "treatment",
      ],
      "notes": 1,
      "path": "areas/epsilon",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "sourdough",
        "fermentation",
        "hydration",
        "ratios",
        "schedules",
      ],
      "notes": 1,
      "path": "areas/gamma",
      "tags": [],
    },
    {
      "keywords": [
        "note",
        "marathon",
        "training",
        "lactate",
        "threshold",
        "pacing",
      ],
      "notes": 1,
      "path": "areas/zeta",
      "tags": [],
    },
    {
      "keywords": [
        "parking",
        "bank guarantee",
        "lease agreement",
        "envelope",
        "docusign",
        "third",
        "pays",
        "monthly",
        "hash",
        "sublease",
        "approval",
        "code",
        "block",
        "reference",
        "invoice",
        "reserved",
        "slots",
        "level",
        "covers",
        "fees",
        "renews",
        "annually",
        "contact",
        "requires",
      ],
      "notes": 2,
      "path": "contracts",
      "tags": [],
    },
    {
      "about": "Architecture Decision Records.",
      "keywords": [
        "transactional",
        "outbox",
        "braintree",
        "postgresql",
        "adopt",
        "postgres",
        "accepted",
      ],
      "notes": 3,
      "path": "decisions",
      "tags": [
        "adr",
        "database",
        "messaging",
      ],
    },
    {
      "keywords": [
        "present",
        "telescope",
        "within depth",
        "mentions",
        "twice",
        "mounts",
        "optics",
      ],
      "notes": 1,
      "path": "deep/one",
      "tags": [],
    },
    {
      "keywords": [
        "buried",
        "folder",
        "beyond",
        "limit",
        "depth",
      ],
      "notes": 1,
      "path": "deep/one/two",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "appendix bank",
        "schedule",
        "term",
      ],
      "notes": 1,
      "path": "imports/tenant-0",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "attached bank",
        "signature",
        "page",
      ],
      "notes": 1,
      "path": "imports/tenant-1",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "lease",
        "attached rent",
        "appendix suite",
      ],
      "notes": 1,
      "path": "imports/tenant-2",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "appendix bank",
        "schedule",
        "term",
      ],
      "notes": 1,
      "path": "imports/tenant-3",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "attached bank",
        "signature",
        "page",
      ],
      "notes": 1,
      "path": "imports/tenant-4",
      "tags": [],
    },
    {
      "keywords": [
        "contract",
        "lease",
        "attached rent",
        "appendix suite",
      ],
      "notes": 1,
      "path": "imports/tenant-5",
      "tags": [],
    },
    {
      "keywords": [
        "asha",
        "lukas",
        "engineering",
        "boston",
        "staff",
        "engineer",
        "berlin",
      ],
      "notes": 3,
      "path": "people",
      "tags": [
        "leadership",
      ],
    },
  ],
  "warnings": [
    "Skipping people/broken.md (malformed YAML frontmatter)",
  ],
}
`;
